Java 17 -> 25